--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "family-chart",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -12,25 +13,26 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@material/web": "^1.0.0-pre.13",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "@material/web": "^1.1.1",
+    "npm-check-updates": "^16.14.12",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@tsconfig/node18": "^2.0.1",
-    "@types/node": "^18.16.17",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.39.0",
-    "eslint-plugin-vue": "^9.11.0",
+    "@rushstack/eslint-patch": "^1.7.0",
+    "@tsconfig/node18": "^18.2.2",
+    "@types/node": "^20.11.5",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/tsconfig": "^0.5.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.20.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
-    "typescript": "~5.0.4",
-    "vite": "^4.3.9",
-    "vue-tsc": "^1.6.5"
+    "prettier": "^3.2.4",
+    "typescript": "~5.3.3",
+    "vite": "^5.0.12",
+    "vue-tsc": "^1.8.27"
   }
 }
